Fix JDK8 compilation errors introduced by cherry-picking #1363. (#1817)
Closes #1816.